--- a/stylesheets/sass/_nav.scss
+++ b/stylesheets/sass/_nav.scss
@@ -3,6 +3,8 @@
 
 nav {
   text-align:left;
+  padding: 100px 0 0 0;
+
 
   ul{
     border: {
@@ -11,13 +13,15 @@ nav {
     color:$bordercolor;
     radius:3px;
     }
-    padding: 1.25px 0 1.25px 1em;
+    // padding: 1.25em 0 1.25em 1em;
     background-color: $navcolor;
   }
   li{
     display:inline-block;
+    padding: 10px;
+    font-size: 2em;
   }
-
+ 
 
 
 
